--- a/index.html
+++ b/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Leonel Ibañez | WDD 130</title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Leonel Ibañez | WWD 130</h1>
+        <img src="images/profile.jpg" alt="Leonel Ibañez" width="200">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit maiores doloremque ad
+            soluta amet. Voluptatum, totam culpa ratione optio excepturi eaque voluptate natus
+            assumenda quasi, quibusdam, accusamus libero nihil vero?</p>
+    </main>
+    <footer>
+        <p>©2026 Leonel Ibañez, Rosario, Argentina</p>
+    </footer>
 </body>
+
 </html>
