--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </nav>
     </header>
     <main>
-        <h1>Leonel Ibañez | WWD 130</h1>
+        <h1>Leonel Ibañez | WDD 130</h1>
         <img src="images/profile.jpg" alt="Leonel Ibañez" width="200">
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit maiores doloremque ad
             soluta amet. Voluptatum, totam culpa ratione optio excepturi eaque voluptate natus
