--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leonel Ibañez | WDD 130</title>
+    <meta name="description" content="WDD130 homepage">
+    <meta name="author" content="Leonel Ibañez">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -22,6 +24,11 @@
             soluta amet. Voluptatum, totam culpa ratione optio excepturi eaque voluptate natus
             assumenda quasi, quibusdam, accusamus libero nihil vero?</p>
     </main>
+    <aside>
+        <h2>Argentina</h2>
+        <img src="images/64898-Argentina.jpg" alt="Argentina">
+        <p>My country is beautiful and very warm</p>
+    </aside>
     <footer>
         <p>©2026 Leonel Ibañez, Rosario, Argentina</p>
     </footer>
