--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </main>
     <aside>
         <h2>Argentina</h2>
-        <img src="images/64898-Argentina.jpg" alt="Argentina">
+        <img src="images/argentina.jpg" alt="Argentina">
         <p>My country is beautiful and very warm</p>
     </aside>
     <footer>
