--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leonel Ibañez | WDD 130</title>
-    <meta name="description" content="Leonel Eduardo Ibañez BYU Idaho WDD 130 course home page">
+    <meta name="description" content="Personal homepage of Leonel Ibañez, a BYU-Idaho student in the WDD 130 Web Fundamentals course, introducing web development projects and personal information.">
     <meta name="author" content="Leonel Ibañez">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
