--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="description" content="Personal homepage of Leonel Ibañez, a BYU-Idaho student in the WDD 130 Web Fundamentals course, introducing web development projects and personal information.">
     <meta name="author" content="Leonel Ibañez">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -15,6 +18,8 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="https://www.linkedin.com/in/leonel-iba%C3%B1ez/">Linkedin</a>
+            <a href="https://www.facebook.com/leo.ibanez.9212/?locale=es_LA">Facebook</a>
         </nav>
     </header>
     <main>
@@ -23,8 +28,13 @@
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit maiores doloremque ad
             soluta amet. Voluptatum, totam culpa ratione optio excepturi eaque voluptate natus
             assumenda quasi, quibusdam, accusamus libero nihil vero?</p>
+        <ul class="box indent">
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/bahia-blanca-argentina-temple?lang=eng" target="_blank">Bahia Blanca Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/cordoba-argentina-temple?lang=eng" target="_blank">Cordoba Argentina Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/buenos-aires-argentina-temple?lang=eng" target="_blank">Buenos Aires Argentina Temple</a></li>
+        </ul>
     </main>
-    <aside>
+    <aside class="box">
         <h2>Argentina</h2>
         <img src="images/argentina.jpg" alt="Beautiful city in Argentina">
         <p>My country is beautiful and very warm</p>
