--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About us</title>
-    <meta name="description" content="Whitewater rafting company for an exciting and safe experience">
-    <meta name="author" content="Leonel Ibañez">
+    <title>About us Rapid Adventures Rafting</title>
+    <meta name="description" content="Whitewater rafting company offering exciting, safe adventures led by experienced guides for all skill levels.">
+    <meta name="author" content="Leonel Eduardo Ibañez">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
@@ -22,8 +22,8 @@
     </header>
     <main>
         <div class="hero">
-            <img src="images/rafting10_1024.jpg" alt="Image of rafting hero">
-            <h1>The Whitewater Rafting Site</h1>
+            <img src="images/rafting10_1024.jpg" alt="Group of people wearing helmets and life jackets whitewater rafting through strong rapids on a river">
+            <h1>Rapid Adventures Rafting</h1>
             <article>
                 <img src="images/rafting_small.jpg" alt="Happy customers rafting">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident natus enim dolor debitis vitae laboriosam reprehenderit, doloremque quo quis deleniti esse ea voluptate aut rem odit sequi atque et assumenda?</p>
@@ -38,7 +38,7 @@
         </section>
     </main>
     <footer>
-        <p>©2026 The Whitewater Rafting Site ,Leonel Ibañez</p>
+        <p>©2026 Rapid Adventures Rafting | Leonel Eduardo Ibañez</p>
         <nav class="socialmedia">
             <a href="https://www.instagram.com/">
                 <img src="images/instagram.svg" alt="Instagram Icon" width="100">
