--- a/wwr/about.html
+++ b/wwr/about.html
@@ -35,6 +35,26 @@
         </section>
         <section>
             <h2>Adventure Awaits You!</h2>
+                <figure>
+                <img src="images/rafting20_600.jpg" alt="Rafting paddle cutting through the water">
+                <figcaption>...</figcaption>
+                </figure>
+                <figure>
+                <img src="images/rafting26_600.jpg" alt="Rafting boats ready on the riverbank">
+                <figcaption>...</figcaption>
+                </figure>
+                <figure>
+                <img src="images/rafting43_600.jpg" alt="Rafting group floating through a scenic river">
+                <figcaption>...</figcaption>
+                </figure>
+                <figure>
+                <img src="images/rafting53_600.jpg" alt="Rafting team navigating intense white water rapids">
+                <figcaption>...</figcaption>
+                </figure>
+                <figure>
+                <img src="images/rafting58_600.jpg" alt="Turquoise river flowing through a rocky canyon">
+                <figcaption>...</figcaption>
+                </figure>
         </section>
     </main>
     <footer>
